--- a/Timer/Timer/Base.lproj/View/StartView.xib
+++ b/Timer/Timer/Base.lproj/View/StartView.xib
@@ -3,16 +3,37 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="StartView">
-            <rect key="frame" x="0.0" y="0.0" width="381" height="156"/>
+            <rect key="frame" x="0.0" y="0.0" width="315" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5W-7U-GV5">
+                    <rect key="frame" x="132.5" y="15" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="S5W-7U-GV5" secondAttribute="height" multiplier="1:1" id="FdW-th-gWg"/>
+                    </constraints>
+                    <state key="normal" backgroundImage="start"/>
+                    <connections>
+                        <action selector="start:" destination="iN0-l3-epB" eventType="touchUpInside" id="WSc-EQ-FlS"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" red="0.92549019607843142" green="0.92156862745098034" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="S5W-7U-GV5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="C3n-Tc-ebR"/>
+                <constraint firstAttribute="bottom" secondItem="S5W-7U-GV5" secondAttribute="bottom" constant="15" id="hdc-d5-vAU"/>
+                <constraint firstItem="S5W-7U-GV5" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="uJX-W2-zRk"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="248.5" y="122"/>
+            <point key="canvasLocation" x="215.5" y="158.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="start" width="200" height="200"/>
+    </resources>
 </document>
