--- a/Timer/Timer/Base.lproj/View/TimerDetailItemStepCell.xib
+++ b/Timer/Timer/Base.lproj/View/TimerDetailItemStepCell.xib
@@ -14,12 +14,11 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hzs-o1-hfj">
                     <rect key="frame" x="10" y="29" width="30" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="kcj-g7-txa"/>
-                        <constraint firstAttribute="width" constant="30" id="yOR-pp-0J3"/>
+                        <constraint firstAttribute="width" constant="30" id="TKh-ge-iLy"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zw-Jn-ATj">
-                    <rect key="frame" x="60" y="35" width="37.5" height="18"/>
+                    <rect key="frame" x="60" y="35" width="38" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -33,7 +32,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fk4-fD-RfS">
-                    <rect key="frame" x="294" y="36" width="35.5" height="17"/>
+                    <rect key="frame" x="294" y="36" width="36" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -41,14 +40,15 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="R49-i0-EmT" secondAttribute="trailing" constant="10" id="06v-9p-uOv"/>
-                <constraint firstItem="5zw-Jn-ATj" firstAttribute="leading" secondItem="hzs-o1-hfj" secondAttribute="trailing" constant="20" id="8Gt-lW-FIF"/>
-                <constraint firstItem="fk4-fD-RfS" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Gq7-ao-Ari"/>
-                <constraint firstItem="R49-i0-EmT" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Zjj-xV-Qpp"/>
-                <constraint firstItem="R49-i0-EmT" firstAttribute="leading" secondItem="fk4-fD-RfS" secondAttribute="trailing" constant="10" id="de8-hi-HTT"/>
-                <constraint firstItem="hzs-o1-hfj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="nLz-4b-HAv"/>
-                <constraint firstItem="hzs-o1-hfj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="rwa-Jw-a6v"/>
-                <constraint firstItem="5zw-Jn-ATj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="yWF-we-FD3"/>
+                <constraint firstItem="hzs-o1-hfj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="BDW-Vm-OrQ"/>
+                <constraint firstItem="hzs-o1-hfj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="UOb-Qn-rO3"/>
+                <constraint firstItem="fk4-fD-RfS" firstAttribute="baseline" secondItem="R49-i0-EmT" secondAttribute="baseline" id="WIt-7o-C1L"/>
+                <constraint firstItem="5zw-Jn-ATj" firstAttribute="baseline" secondItem="fk4-fD-RfS" secondAttribute="baseline" id="WYX-wL-aXu"/>
+                <constraint firstItem="hzs-o1-hfj" firstAttribute="bottom" secondItem="R49-i0-EmT" secondAttribute="bottom" id="bXR-Py-VRF"/>
+                <constraint firstItem="hzs-o1-hfj" firstAttribute="centerY" secondItem="5zw-Jn-ATj" secondAttribute="centerY" id="fbe-Fz-7kT"/>
+                <constraint firstItem="R49-i0-EmT" firstAttribute="leading" secondItem="fk4-fD-RfS" secondAttribute="trailing" constant="10" id="icv-0S-ukb"/>
+                <constraint firstAttribute="trailing" secondItem="R49-i0-EmT" secondAttribute="trailing" constant="10" id="v1e-Fh-aZz"/>
+                <constraint firstItem="5zw-Jn-ATj" firstAttribute="leading" secondItem="hzs-o1-hfj" secondAttribute="trailing" constant="20" id="wPE-3b-sJy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
